# S21_BrickGame

src/: Dockerfile  Makefile  valgrisha.sh
src/brick_game/snake/: Controller.h  Snake.h
src/brick_game/tetris/: tetris.h
src/brick_game/tetris/functions/: check.cc  init.cc  move.cc  tools.cc
src/gui/cli/: Console_menu.cc
src/gui/cli/snake/: Console_view.h
src/gui/cli/tetris/: frontend_tetris.cc  frontend_tetris.h
src/gui/desktop/Menu/: CMakeLists.txt  main.cpp  menuwindow.cpp  menuwindow.h
src/gui/desktop/Snake_game/: CMakeLists.txt  Snakewindow.cpp  Snakewindow.h  game.cpp  game.h  helpfield.cpp  helpfield.h  main.cpp
src/gui/desktop/Snake_game/build-Snake_game-Desktop_x86_darwin_generic_mach_o_64bit-Debug/: qtcsettings.cmake
src/gui/desktop/Tetris_game/: CMakeLists.txt  CMakeLists.txt.user.64d4cc0  gamefield.cpp  gamefield.h  gameoverfield.cpp  gameoverfield.h  main.cpp  tetriswindow.cpp  tetriswindow.h  textfield.cpp  textfield.h
src/gui/desktop/Tetris_game/resource/: resource.qrc
src/tests/: test_snake.cc  test_tetris.cc
